assets: prevent the overflow of the buttons in the actions grid
This commit prevents buttons in the actions grid from going into
overflow and potentially becoming invisible to the user, limiting the
widths of other grid cells and introducing a dropdown where buttons are
inserted as the viewport shrinks.

--- a/assets/src/components/routes/ActionWrapper/Action.css
+++ b/assets/src/components/routes/ActionWrapper/Action.css
@@ -1061,7 +1061,7 @@ inherit the disabled style */
 
 .fullscreen-transformation__panel-content {
 	height: calc(100% - 60px);
-	overflow-y: scroll;
+	overflow-y: auto;
 }
 
 .fullscreen-transformation__samples-loading {
